# data-curation

./: .gitignore  README.md  environment.yml  joint_grouping_rby1.yaml  pyproject.toml  raw_values_implementation_report.md
scripts/: joint_to_cartesian.py  run_lerobot_segmentation.py  segment_episodes.py
src/segmentation/: __init__.py  cli.py  config.py  data_loader.py  evaluation.py  features.py  kinematics.py  lerobot_adapter.py  pipeline.py  report.py  ruptures_segmenter.py  segmenter.py  sktime_benchmark.py  ticc_primitives.py
src/segmentation/configs/: __init__.py  lerobot_segmentation.yaml  rby1_segment_config.yaml
src/segmentation/robots/: rby1.py
tests/: test_lerobot_adapter.py  test_segmentation_pipeline.py
